Self screener -> self assessment
Why:
We were using the terms self screener and self assessment
interchangeably. We would like to consistently use self assessment

This commit:
- changes instances of screener to assessment.
- note that the image selfScreenerIntro.png is set in the build scripts
and would require updating a lot of the remote repo. We will do this in
a following commit at the same time as updating the remote repo.

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -250,7 +250,7 @@
     "how_the_app_works": "Πώς λειτουργεί η εφαρμογή",
     "legal": "Νομοθεσία"
   },
-  "self_screener": {
+  "self_assessment": {
     "age_range": {
       "eighteen_to_sixty_four": "18 - 64",
       "get_my_guidance": "Λήψη καθοδήγησης",
@@ -314,8 +314,8 @@
       "not_well": "Όχι καλά"
     },
     "intro": {
-      "agree_and_start_screener": "Συμφωνώ και επιθυμώ εκκίνηση του εργαλείου διάγνωσης",
-      "covid19_self_screener": "Εργαλείο Αυτοδιάγνωσης COVID-19",
+      "agree_and_start_assessment": "Συμφωνώ και επιθυμώ εκκίνηση του εργαλείου διάγνωσης",
+      "covid19_self_assessment": "Εργαλείο Αυτοδιάγνωσης COVID-19",
       "find_out_how_to_care": "Μάθετε πώς να φροντίζετε τον εαυτό σας και τους άλλους μετά από στενή επαφή με κάποιον που διαγνώστηκε θετικά με COVID-19",
       "if_this_is": "Εάν πρόκειται για κατάσταση έκτακτης ανάγκης, καλέστε {{emergencyPhoneNumber}}",
       "this_is_based_on": "Αυτό βασίζεται στην πιο πρόσφατη καθοδήγηση από το CDC και μπορεί να ενημερώνεται με την πάροδο του χρόνου, καθώς μαθαίνουμε για τον τρόπο με τον οποίο εξαπλώνεται ο ιός και την ασθένεια που προκαλεί",
