--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -131,7 +131,7 @@
     "how_the_app_works": "Fonctionnement de l’application",
     "legal": "Juridique"
   },
-  "self_screener": {
+  "self_assessment": {
     "general_symptoms": {
       "other": "Autres"
     },
