--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -239,7 +239,7 @@
     "how_the_app_works": "어떻게 앱이 작동하나요?",
     "legal": "법률"
   },
-  "self_screener": {
+  "self_assessment": {
     "general_symptoms": {
       "other": "그 외 증상"
     },
