--- a/src/locales/ht_HT.json
+++ b/src/locales/ht_HT.json
@@ -191,7 +191,7 @@
     "how_the_app_works": "Kijan aplikasyon an fonksyone",
     "legal": "Legal"
   },
-  "self_screener": {
+  "self_assessment": {
     "general_symptoms": {
       "other": "Lòt"
     },
