--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -6,7 +6,7 @@
   "label": {
     "launch_enable_notif": "Aktifkan Notifikasi",
     "launch_get_started": "Mulai",
-    "launch_screen1_header": "Selamat datang di PathCheck"
+    "launch_screen1_header": "Selamat datang di "
   },
   "onboarding": {
     "terms_header_title": "Syarat Penggunaan"
