--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -12,7 +12,7 @@
   "label": {
     "launch_enable_notif": "Permitir Notificações",
     "launch_get_started": "Começar",
-    "launch_screen1_header": "Bem-vindo ao PathCheck",
+    "launch_screen1_header": "Bem-vindo ao ",
     "privacy_policy": "Política de Privacidade"
   },
   "onboarding": {
