--- a/src/locales/so.json
+++ b/src/locales/so.json
@@ -9,9 +9,7 @@
     "back": "Noqo",
     "close": "Xir",
     "continue": "Sii wado",
-    "disabled": "La damiyay",
     "done": "Dhammaad",
-    "enabled": "Daar",
     "maybe_later": "Laga yaabee hadhow",
     "next": "Ka xiga",
     "no_thanks": "Maya waad mahadsantahay",
@@ -110,14 +108,13 @@
       "location_disabled_error_title": "Uga Oggolow gudaha Dejimaha",
       "location_header": "Goobta (Location)",
       "proximity_tracing_header": "Raadraaca Isku Dhawaanshaha",
-      "report_positive_result": "Ka soo warbixi natiijada ka tijaabinta togan ",
       "share": "Aabka wadaag oo adiga iyo dadka kaleba iska caawiya in aad iska isdifaacdaan",
       "share_message": "Check out this app {{applicationName}}, oo naga caawin kara xakamaynta cudurka COVID-19! {{appDownloadLink}}",
       "tracing_off_header": "Ma shaqaynayo",
       "tracing_off_subheader": "Karti u yeel Bluetoothka iyo Raadraaca Isku-Dhowaanshaha si aad u hesho macluumaad ku saabsan ufeydsanka suurtagalka ah",
-      "tracing_off_subheader_location": "Shid Bluetooth, Raadinta Dhawaanshaha (Exposure Notifications), iyo Goobta (Location) si aad u hesho macluumaad ku saabsan soo-bandhigista suurtagalka ah",
       "tracing_on_header": "Wuu shaqaynayaa"
     },
+    "call_emergency_services": "Wac adeegyada Xaaladaha Degdegga Ah (Imerjansiga)",
     "fix": "Ku hagaaji cilladaha {{technology}}",
     "get_more_info": "Faahfaahin dheeri ah ka hel {{technology}}",
     "location_info_body_1": "Tikniyoolajiyadda Ogeysiiska Soo-gaarista waxay isticmaashaa iskaanka Bluetooth ka si loo fahmo aaladaha midba midka kale u dhow. Dhammaan taleefannada gacanta ee isticmaala Android 6.0 iyo wixii ka sareeya, si loogu adeegsado iskaanka Bluetooth ka, waxaa loo baahan yahay in qaybta dejinta (location setting) ee barnaamijka la shido dhammaan barnaamijyada, ma ahan oo keliya barnaamijyada ku yimid Nidaamka Ogeysiisyada Soo-gaarsinta.",
@@ -128,9 +125,7 @@
     "proximity_tracing_info_body_2": "Haddii ay dhacdo la kulan, xogtaada, iyo macluumaadkaagu ayaa wali la garan doonin magacaaga iyo qofaad tahay. Aabku ma kaydin doono marnaba xog shaqsiyadeed. Kaliya tirooyin aqoonsiyo bakhtiyaanasiib ayaa la isweydaarsadaa. Kuwaani waxa lagu tirtiraa 14 maalmood gudahood.",
     "proximity_tracing_info_header": "Raadraaca Isku Dhawaanshaha",
     "proximity_tracing_info_subheader_1": "Sidee ayuu Raadraaca Isku Dhawaanshahu u shaqeeyaa?",
-    "proximity_tracing_info_subheader_2": "Xogtaydu ma xasilloon tahay?",
-    "status_icon_active_label": "Soo xaadirin cad oo ku jira wareeg cagaaran",
-    "status_icon_inactive_label": "X cad oo ku jira wareeg casaan"
+    "proximity_tracing_info_subheader_2": "Xogtaydu ma xasilloon tahay?"
   },
   "label": {
     "check": "Sax ku samaynta",
@@ -151,9 +146,9 @@
     "activation_header_title": "Rakibaadda Aabka (App)",
     "app_setup_complete_body": "{{applicationName}} waa shidan yahay. Waad ku mahadsantahay gacanta aad ka geysanayso joojinta silsiladda caabuqa.",
     "app_setup_complete_header": "Samaynta Aabka waa Dhammeystiran yahay!",
-    "app_setup_incomplete_body": "{{applicationName}} wuxuu ubaahanyahay Raadinta Dhawaanshaha (Exposure Notifications) iyo oggolaanshaha Bluetooth ka si loo ogaado goorta iyo meesha aad bay’la ugu noqotay COVID 19. Waxaad tan ku fasaxi kartaa qaybta Setting (Dejinta).",
+    "app_setup_incomplete_body": "{{applicationName}} wuxuu ubaahanyahay Raadinta Dhawaanshaha (Proximity Tracing) iyo oggolaanshaha Bluetooth ka si loo ogaado goorta iyo meesha aad bay’la ugu noqotay COVID 19. Waxaad tan ku fasaxi kartaa qaybta Setting (Dejinta).",
     "app_setup_incomplete_header": "Samaynta Aabka ma Dhameystirna!",
-    "app_setup_incomplete_location_body": "{{applicationName}} wuxuu ubaahanyahay Raadinta Dhawaanshaha (Exposure Notifications), oggolaanshaha Bluetooth ka, iyo Goobta si loo ogaado goorta iyo meesha aad ugu feydsantay COVID 19. Waxaad tan ku fasaxi kartaa Setting (Dejinta).",
+    "app_setup_incomplete_location_body": "{{applicationName}} wuxuu ubaahanyahay Raadinta Dhawaanshaha (Proximity Tracing), oggolaanshaha Bluetooth ka, iyo Goobta si loo ogaado goorta iyo meesha aad ugu feydsantay COVID 19. Waxaad tan ku fasaxi kartaa Setting (Dejinta).",
     "eula": "Heshiiska Sharciga Isticmaalaha Dambe",
     "eula_agree_terms_of_use": "Waan oggolahay inaan aqriyay oo aan aqbalay shuruudaha isticmaalka",
     "location_alert_body": "Si aad u isticmaasho iskaanka Bluetooth ka, waxaa loo baahan yahay in dejinta aaladda goobteedu daaran Tahay.",
@@ -177,7 +172,7 @@
       "body_4": "Haddii aqoonsi la calaamadeeyay ay iswaafaqaan aqoonsi ku keydsan taleefankaaga, tani waxay muujineysaa inaad la kulantay qof laga helay cudurka COVID-19. Tan waa sida {{applicationName}} go'aamin kara haddii adiga ay dhici karto in fayraska aad u feydsantay",
       "body_5": "Haddii uu jiro iswaafaqsanaan, {{applicationName}} ayaa ku ogeysiin doona oo ku siin doona hagitaan dheeraad ah oo ka socda waaxdaada caafimaadka.\n\nTani waa sida {{applicationName}} uu awood uu kuu siin karo inaad go'aan ka gaarto waxyaabo ku saabsan caafimaadkaaga, oo aad ammaanka bulshadaada ku ilaaliso, dhammaantood iyadoon la ogeyn cidda aad tahay iyo halka aad joogtay.",
       "header": "Sidaan u ilaalinno asturnaantaada",
-      "subheader_1": "Markaad daarto Raadinta U dhowaanshaha (Exposure Notifications) taleefankaaga waxaa lagu calaamadeeyaa si isdaba-joog ah oo is beddelaya, aqoonsiyo qori-tuur ah",
+      "subheader_1": "Markaad daarto Raadinta U dhowaanshaha (Proximity Tracing) taleefankaaga waxaa lagu calaamadeeyaa si isdaba-joog ah oo is beddelaya, aqoonsiyo qori-tuur ah",
       "subheader_2": "Telefoonnada raadraacidda u dhawaanshaha kartida loo siisay koodhadh ku kala beddelashada aaladaha kale ee ay la kulmaan",
       "subheader_3": "Markuu adeegsade baaritaanka laga helo, waxay dooran karaan inay si qarsoodi ah ula wadaagaan xaaladdooda caafimaad",
       "subheader_4": "Telefoon kasta wuxuu marba sarfarka ugu baaqaa liiska aqoonsiyada la calaamadeeyay wuxuu raadiyaa mid waafaqa",
@@ -214,6 +209,7 @@
     "debug": "Cillad ka saarka",
     "exposure_history": "Taariikhda Ufeydsanka",
     "exposures": "Soo gaarista",
+    "home": "Hoy",
     "legal": "Sharciyeedka"
   },
   "settings": {
