--- a/src/locales/tl.json
+++ b/src/locales/tl.json
@@ -9,9 +9,7 @@
     "back": "Bumalik",
     "close": "Isara",
     "continue": "Ituloy",
-    "disabled": "Hindi pinagana",
     "done": "Tapos",
-    "enabled": "Pinagana",
     "maybe_later": "Baka Mamaya",
     "next": "Sa susunod",
     "no_thanks": "Salamat nalang",
@@ -109,15 +107,14 @@
       "location_disabled_error_message": "Upang i-activate ang teknolohiya ng Abiso sa Exposure, pahintulutan ang pag-access sa Lokasyon sa app na Mga Setting",
       "location_disabled_error_title": "Pahintulutan sa Mga Setting",
       "location_header": "Lokasyon",
-      "proximity_tracing_header": "Exposure Notifications",
-      "report_positive_result": "Iulat ang positibong resulta",
+      "proximity_tracing_header": "Proximity Tracing",
       "share": "Ibahagi ang app at tulungan protektahan ang iyong sarili at ang ibang tao.",
       "share_message": "Suriin ang app na{{applicationName}}, na maaring makatulong mapigilan ang pagkalat ng COVID-19!{{appDownloadLink}}",
       "tracing_off_header": "Hindi Aktibo",
-      "tracing_off_subheader": "Paganahin ang Bluetooth at Exposure Notifications upang makakuha ng impormasyon tungkol sa mga posibleng pagkakalantad",
-      "tracing_off_subheader_location": "Paganahin ang Bluetooth, Exposure Notifications, at Location upang makakuha ng impormasyon tungkol sa mga posibleng pagkahawa o pagkasalamuha",
+      "tracing_off_subheader": "Paganahin ang Bluetooth at Proximity Tracing upang makakuha ng impormasyon tungkol sa mga posibleng pagkakalantad",
       "tracing_on_header": "Aktibo"
     },
+    "call_emergency_services": "Tumawag sa Serbisyong Pang-emergency o Emergency Services",
     "fix": "Ayusin ang mga isyu sa {{technology}}",
     "get_more_info": "Kumuha ng karagdagang impormasyon sa {{technology}}",
     "location_info_body_1": "Gumagamit ang Teknolohiya ng Abiso sa Exposure ng pag-scan ng Bluetooth upang maunawaan kung anong mga aparato ang malapit sa isa't isa. Sa lahat ng mga teleponong nagpapatakbo ng Android 6.0 at mas bago, upang magamit ang pag-scan sa Bluetooth, kailangang i-on ang setting ng lokasyon ng aparato para sa lahat ng mga app, hindi lamang mga app na binuo gamit ang Exposure Notification System.",
@@ -126,11 +123,9 @@
     "open_settings": "Buksan ang Settings",
     "proximity_tracing_info_body_1": "Kung ang mga smartphone na naka-install ang app ay naka-on o pinagagana, naka-enable ang Bluetooth, at malapit sa isa't isa sa loob ng takdang panahon, irirehistro ang engkwentrong ito sa iyong aparato.",
     "proximity_tracing_info_body_2": "Sa kaganapan ng isang pagtatagpo, ang iyong data at impormasyon ay mananatiling anonimo. Hindi nag-iimbak ang app ng anumang personal na data.  Mga random ID lamang ang ipinagpapalit.  Tatanggalin ang mga ito sa loob ng 14 na araw.",
-    "proximity_tracing_info_header": "Exposure Notifications",
-    "proximity_tracing_info_subheader_1": "Paano gumagana ang Exposure Notifications?",
-    "proximity_tracing_info_subheader_2": "Ligtas ba ang aking mga data?",
-    "status_icon_active_label": "Isang puting tseke sa isang berdeng bilog",
-    "status_icon_inactive_label": "Isang puting x sa isang pulang bilog"
+    "proximity_tracing_info_header": "Proximity Tracing",
+    "proximity_tracing_info_subheader_1": "Paano gumagana ang Proximity Tracing?",
+    "proximity_tracing_info_subheader_2": "Ligtas ba ang aking mga data?"
   },
   "label": {
     "check": "Checkmark",
@@ -153,9 +148,9 @@
     "activation_header_title": "Setup ng App",
     "app_setup_complete_body": "{{applicationName}} ay aktibo. Salamat sa iyong pagtulong na supilin ang paglaganap ng impeksyon.",
     "app_setup_complete_header": "Kumpleto ang Pag-setup ng App!",
-    "app_setup_incomplete_body": "Kinakailangan ng {{applicationName}} pahintulot sa Exposure Notifications, Bluetooth, at Location upang malaman kung kailan at saan ka posibleng nahawa o nakasalamuha ng tao o gamit na may COVID 19. Maaari mong mag-awtorisa ito sa Mga Setting.",
+    "app_setup_incomplete_body": "Kinakailangan ng {{applicationName}} pahintulot sa Proximity Tracing, Bluetooth, at Location upang malaman kung kailan at saan ka posibleng nahawa o nakasalamuha ng tao o gamit na may COVID 19. Maaari mong mag-awtorisa ito sa Mga Setting.",
     "app_setup_incomplete_header": "Hindi Kumpleto ang Pag-setup ng App",
-    "app_setup_incomplete_location_body": "Kinakailangan ng {{applicationName}} pahintulot sa Exposure Notifications, Bluetooth, at Location upang malaman kung kailan at saan ka posibleng nahawa o nakasalamuha ng tao o gamit na may COVID 19. Maaari mong pahintulutan ito sa Mga Setting.",
+    "app_setup_incomplete_location_body": "Kinakailangan ng {{applicationName}} pahintulot sa Proximity Tracing, Bluetooth, at Location upang malaman kung kailan at saan ka posibleng nahawa o nakasalamuha ng tao o gamit na may COVID 19. Maaari mong pahintulutan ito sa Mga Setting.",
     "eula": "Tapusin ang Ligal na Kasunduan ng Gumagamit",
     "eula_agree_terms_of_use": "Sumasang-ayon ako na nabasa ko at tinanggap ang mga tuntunin ng paggamit",
     "location_alert_body": "Upang magamit ang pag-scan sa Bluetooth, kailangang i-on ang setting ng lokasyon ng aparato.",
@@ -179,16 +174,16 @@
       "body_4": "Kung ang isang naka-flag na ID ay tumutugma sa isang ID na nakaimbak sa iyong telepono, ipinapahiwatig nito na maaaring nakahalubilo ka ng isang taong nagpositibo sa COVID-19. Ganito matutukoy ng {{applicationName}} kung ikaw ay nahantad o na-expose sa virus.",
       "body_5": "Kung mayroong katugma, aabisuhan ka ng {{applicationName}} at magbibigay ng karagdagang gabay mula sa iyong kagawaran ng kalusugan. \n\n Ito ang makapagbibigay sa iyo ng kapangyarihan  {{applicationName}} upang gumawa ng mga desisyon tungkol sa iyong kalusugan, at mapanatiling ligtas ang iyong komunidad, habang hindi mo ipinaaalam kung sino ka o kung saan ka man nakapunta.",
       "header": "Paano namin protektahan ang iyong privacy",
-      "subheader_1": "Kapag pinagana mo ang Exposure Notifications, naka-tag ang iyong cellphone o device ng madalas na nagbabago na mga random na ID",
-      "subheader_2": "Ang mga cellphone o device na may Exposure Notifications ay nagpapaganang mag-swap ng mga ID sa iba pang mga aparato na nakasalubong nila",
+      "subheader_1": "Kapag pinagana mo ang Proximity Tracing, naka-tag ang iyong cellphone o device ng madalas na nagbabago na mga random na ID",
+      "subheader_2": "Ang mga cellphone o device na may Proximity Tracing ay nagpapaganang mag-swap ng mga ID sa iba pang mga aparato na nakasalubong nila",
       "subheader_3": "Kapag ang isang gumagamit ay pumositibo, maaari nilang piliing anonimong ibahagi ang katayuan ng kanilang kalusugan",
       "subheader_4": "Ang bawat ng cellphone o device ay panay na nag-pi-ping o kumukunekta sa server para sa listahan ng mga naka-flag na mga ID at humahanap ng mga katugma",
       "subheader_5": "Aabisuhan ka kung ang {{applicationName}} ay makakahanap ng positibong katugma sa isang naka-flag na ID"
     },
     "proximity_tracing_body1": "Kung ang mga smartphone na naka-install ang app ay naka-on, naka-on ang Bluetooth, at malapit sa bawat isa sa isang tagal ng panahon, nakarehistro ang isang engkwentro sa iyong aparato.",
     "proximity_tracing_body2": "Sa kaganapan ng isang pagtatagpo, ang iyong data at impormasyon ay mananatiling anonimo. Hindi nag-iimbak ang app ng anumang personal na data.  Mga random ID lamang ang ipinagpapalit.  Tatanggalin ang mga ito sa loob ng 14 na araw.",
-    "proximity_tracing_button": "Isaaktibo ang Exposure Notifications",
-    "proximity_tracing_header": "Isaaktibo ang Exposure Notifications",
+    "proximity_tracing_button": "Isaaktibo ang Proximity Tracing",
+    "proximity_tracing_header": "Isaaktibo ang Proximity Tracing",
     "proximity_tracing_subheader1": "Paano ito gumagana?",
     "proximity_tracing_subheader2": "Ligtas ba ang aking mga data?",
     "proximity_tracing_subheader3": "Hindi ka pinoprotektahan ng app ng ito mula sa impeksyon mula sa COVID-19.",
@@ -216,6 +211,7 @@
     "debug": "Pag-debug",
     "exposure_history": "Exposure History o Kasaysayan ng Pagkalantad sa Posibleng Pagkahawa",
     "exposures": "Mga Pagkakalantad",
+    "home": "Home o Umpisa",
     "legal": "Ligal"
   },
   "settings": {
