--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -20,12 +20,13 @@
     "why_did_i_get_an_en_para": "Recibirás una notificación de exposición cuando te hayas cruzado con una persona que más taerde haya recibido un diagnóstico confirmado o haya dado positivo en un test por COVID-19 siempre y cuando elija notificar al resto."
   },
   "home": {
+    "call_emergency_services": "Servicios de emergencia",
     "open_settings": "Abrir Opciones de Configuración"
   },
   "label": {
     "launch_enable_notif": "Permitir notificaciones",
     "launch_get_started": "Iniciar",
-    "launch_screen1_header": "Bienvenido a PathCheck",
+    "launch_screen1_header": "Bienvenido a ",
     "privacy_policy": "Política de privacidad"
   },
   "navigation": {
@@ -37,6 +38,7 @@
     "terms_header_title": "Condiciones de uso"
   },
   "screen_titles": {
+    "home": "Inicio",
     "legal": "Aviso legal"
   }
 }
