--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -25,12 +25,13 @@
       "tracing_off_header": "Уведомления об опасности отключены",
       "tracing_off_subheader": "Включить уведомления об опасности, чтобы получать информацию о нахождении в опасных зонах"
     },
+    "call_emergency_services": "Скорая помощь",
     "open_settings": "Откройте настройки"
   },
   "label": {
     "launch_enable_notif": "Включить уведомления",
     "launch_get_started": "Начать",
-    "launch_screen1_header": "Добро пожаловать в PathCheck",
+    "launch_screen1_header": "Добро пожаловать в ",
     "privacy_policy": "Политика конфиденциальности"
   },
   "navigation": {
@@ -42,6 +43,7 @@
     "terms_header_title": "Условия использования"
   },
   "screen_titles": {
+    "home": "Главная страница",
     "legal": "Правовая информация"
   }
 }
