Calculate trend from full day of data
Why:
----

The trend was being calculated from the latest data entry which was on
occasions an incomplete day worth of data.

This Commit:
----

- Move necessary configuration checks to the data context to avoid
repeating the checks across the visual components.
- Add data checks to the covid data context. This is needed since the
data source is external and we need at least some data in existence to
do the calculations.
- Use new data context state down the views hierarchy

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,6 +42,7 @@
     "down_from_last_week": "Down from last week",
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
     "new_cases": "New Cases",
+    "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
     "see_more": "See more",
     "total_cases": "Total cases",
     "total_deaths": "Total deaths",
