Refactor some navigation to improve reusability and accessibility
Why: we were using suboptimal patterns to create some header navigation
components. We would like to use better patterns to improve
accessibility, UX, and reusability in the codebase.

This commit:
- Updates some navigational elements to use React Navigation
to render them instead of rendering them within the component itself
- Removes the ModalStack and moves all the screens to the MainNavigator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -266,13 +266,19 @@
   },
   "screen_titles": {
     "callback": "Request call",
+    "bluetooth": "Bluetooth",
+    "location": "Location",
+    "exposure_notifications": "Exposure Notifications",
     "debug": "Debug",
     "exposure_history": "Exposure History",
     "exposure_scanning": "Exposure Detection",
     "exposures": "Exposures",
     "home": "Dashboard",
     "how_the_app_works": "How the app works",
-    "legal": "Legal"
+    "legal": "Legal",
+    "protect_privacy": "How we protect your privacy",
+    "select_language": "Select Language",
+    "select_symptoms": "Select Symptoms"
   },
   "self_assessment": {
     "age_range": {
